Fixing some styling for date picker on smaller screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,9 @@ a:hover, a:active {
 	#search-bar {
  		width: 100%;
  	}
+ 	#datepicker-button {
+ 		margin-left: 0;
+ 	}
 }
 @media (min-width: 768px) and (max-width: 991px) {
 	/* Medium devices (desktops, 768px and up) */
@@ -435,6 +438,9 @@ a:hover, a:active {
 	}
 	#search-bar {
  		width: 100%;
+ 	}
+ 	#datepicker-button {
+ 		margin-left: 0;
  	}
 }
 @media (min-width: 992px) and (max-width: 1199px) {
